# libstocksuquote

./: ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.html  README.md  README.orig  TODO  configure  configure.in  mkinstalldirs
client/: Makefile  Makefile.am  Makefile.in  client.c
lib/: Makefile  Makefile.am  Makefile.in  csv.c  currency.c  history.c  http.c  lists.c  lists.h  stocks.c  stocks.h
