dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/csv.h)
AM_INIT_AUTOMAKE(libstocks, 0.5.0)

AC_PREFIX_DEFAULT(/usr)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
dnl AC_PROG_MAKE_SET
dnl Checks for libraries.

AC_CHECK_LIB(socket, connect)
AC_CHECK_LIB(nsl, gethostbyname)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(socket strdup strstr)


AC_ARG_ENABLE(debug,
[  --enable-debug    Turn on debugging],
[case "${enableval}" in
  yes) debug=true ;;
  no)  debug=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
esac],[debug=false])

AM_CONDITIONAL(DEBUG, test x$debug = xtrue)

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \ ]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi

AC_OUTPUT(lib/Makefile client/Makefile Makefile)
